fixed logo and iframe overflow

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -57,7 +57,6 @@ body {
         clear: both;
         margin: 60px 0;
         padding: 0 20px;
-        overflow: hidden;
 
         &:nth-child(odd) {
             background-color: aliceblue;
