--- a/_sass/_header.scss
+++ b/_sass/_header.scss
@@ -13,6 +13,7 @@
     margin: 0 30px;
     svg {
         width: 300px;
+        height: auto;
     }
 }
 
