--- a/css/styleguide.scss
+++ b/css/styleguide.scss
@@ -43,7 +43,7 @@
 .rooster {
     width: 30%;
     float: right;
-    margin-left: 30px;
+    margin: 30px;
 }
 
 // block level code (pre) styling
